mongo-c-driver 1.8.0
====================

  * The command functions mongoc_client_read_write_command_with_opts,
    mongoc_database_read_write_command_with_opts, and
    mongoc_collection_read_write_command_with_opts now ignore the "read_prefs"
    parameter.
  * mongoc_collection_create_index and mongoc_collection_create_index_with_opts
    are both now deprecated. Use mongoc_database_write_command_with_opts
    instead; a guide to creating an index using that function has been added.
  * New stream method mongoc_stream_timed_out.

Thanks to everyone who contributed to the development of this release.

  * A name
  * Another name


mongo-c-driver 1.7.0
====================

It is my please to announce mongo-c-driver 1.7.0.

New features and bug fixes:

  * CMake build now installs .pc files for programs that link to libmongoc using
    pkg-config. Both the CMake and Autotools build systems now install .cmake
    files for programs that link to libmongoc using CMake. Linking to libmongoc
    statically or dynamically is now much more convenient. See the new tutorial
    section "Include and link libmongoc in your C program".
  * New CMake option ENABLE_STATIC can be ON, OFF, or AUTO (the default)
  * Minimum required CMake version has been increased to 3.1.
  * CMake remains experimental on non-Windows platforms and issues a warning now
  * Support for wire compression.
    * Support for snappy and zlib. MongoDB 3.4 only supports snappy, while zlib
      support is expected in MongoDB 3.6.
      The enable, configure mongoc like so:
      ./configure --with-snappy --with-zlib
    * New functions: mongoc_uri_get_compressors & mongoc_uri_set_compressors, to
      get and set compressor configuration on mongoc_uri_t
    * Added support for comma separated "compressors" connection string option (e.g.
      mongodb://localhost/?compressors=snappy,zlib)
    * Added support for configuring zlib compression level in the connection string