@@ -1,6 +1,8 @@
 mongo-c-driver 1.8.0
 ====================
 
+  * mongoc_collection_find_and_modify_with_opts now respects a "writeConcern"
+    field in the "extra" BSON document in its mongoc_find_and_modify_opts_t.
   * The command functions mongoc_client_read_write_command_with_opts,
     mongoc_database_read_write_command_with_opts, and
     mongoc_collection_read_write_command_with_opts now ignore the "read_prefs"
